// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge #render() should not render wrapper if children is not provided 1`] = `
<div
  className="ui-badge-badge"
  mods={Array []}
>
  Badge title
</div>
`;

exports[`Badge #render() should render children 1`] = `
<div
  className="ui-badge"
>
  Badge Content
  <div
    className="ui-badge-badge"
    mods={Array []}
  >
    Badge title
  </div>
</div>
`;
